# PLADE

./: .gitignore  CMakeLists.txt  README.md  plane_based_registration.vcxproj  registration.cpp
.github/workflows/: cmake-gcc.yml
code/: CMakeLists.txt
code/PLADE/: CMakeLists.txt  main.cpp  plade.cpp  plade.h  plane_extraction.cpp  plane_extraction.h  ply_reader.cpp  ply_reader.h  util.cpp  util.h
code/ResultViewer/: CMakeLists.txt  main.cpp
plane_based_registration/: PLADE.sln  common.h  flip_norm.cpp  opencv2410.props  pcl1.8.0_debug.props  pcl1.8.0_release.props  plane_based_registration.filters  plane_based_registration.sln  readVG.cpp  stdafx.cpp
plane_based_registration/Debug/: Thumbs.db
plane_based_registration/Release/: Thumbs.db
plane_based_registration/ann_1.1.2/MS_Win32/: Ann.sln  UpgradeLog.XML  UpgradeLog.htm
plane_based_registration/ann_1.1.2/MS_Win32/Backup/: Ann.sln
plane_based_registration/ann_1.1.2/MS_Win32/ann2fig/: ann2fig.vcxproj  ann2fig.vcxproj.filters
plane_based_registration/ann_1.1.2/MS_Win32/dll/: CL.read.1.tlog  CL.write.1.tlog  dll.vcxproj  dll.vcxproj.filters  dll.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
plane_based_registration/ann_1.1.2/MS_Win32/dll/Debug/: ANN.exp  ANN.lib  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  dll.lastbuildstate  dll.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
plane_based_registration/ann_1.1.2/MS_Win32/dll/Release/: ANN.exp  ANN.lib  cl.command.1.tlog  dll.lastbuildstate  dll.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
plane_based_registration/ann_1.1.2/MS_Win32/sample/: sample.vcxproj  sample.vcxproj.filters
plane_based_registration/ann_1.1.2/MS_Win32/test/: test.vcxproj  test.vcxproj.filters
plane_based_registration/impl/: short_filter.hpp  sift_keypoint_large.hpp
plane_based_registration/include/: kfpcs_ia_data.h  short_filter.h  sift_keypoint_large.h
plane_based_registration/include/impl/: short_filter.hpp
plane_based_registration/libs/: ANN.lib  ANN_d.lib  pointcloud_processing.lib  pointcloud_processing_d.lib
plane_based_registration/plane_based_registration/: 1_parseVG.cpp  2_registration.cpp  plane_based_registration.filters  plane_based_registration.sln  plane_based_registration.vcxproj  stdafx.cpp
plane_based_registration/plane_based_registration/impl/: sift_keypoint_large.hpp
plane_based_registration/plane_based_registration/include/: short_filter.h
plane_based_registration/pointcloud_processing/: pointcloud_processing.sln
plane_based_registration/pointcloud_processing/grating_corefun/: ReadMe.txt  grating_corefun.vcxproj  grating_corefun.vcxproj.filters  pointCloud_processing.cpp  pointCloud_processing.h  point_set_ransac.cpp  point_set_ransac.h  stdafx.cpp  stdafx.h  vertex_group.h
plane_based_registration/pointcloud_processing/grating_corefun/RANSAC-1.1/: 3rd_ransac.pro  3rd_ransac.sln  3rd_ransac.vcxproj  3rd_ransac.vcxproj.filters
plane_based_registration/sample_data/: source.bpn  source_plane.txt  source_planeIndex.txt  target_plane.txt  target_planeIndex.txt
plane_based_registration_old/: common.h  flip_norm.cpp  plane_based_registration.vcxproj  readVG.cpp  registration.cpp
plane_based_registration_old/impl/: short_filter.hpp
plane_based_registration_old/include/: kfpcs_ia_data.h  sift_keypoint_large.h
plane_based_registration_old/include/impl/: short_filter.hpp
sample_data/: file_pairs.txt  file_pairs_results.txt  polyhedron_source.ply  polyhedron_source_groundtruth.txt  polyhedron_target.ply  room_source_groundtruth.txt  room_target.ply
